Fixed overflow
it was set on "scroll". Now it's "visible"

--- a/prismatic.css
+++ b/prismatic.css
@@ -62,14 +62,14 @@ p, ul, ol, dl, q { margin-bottom: .8em; }
 	.wrapper_inner { margin: 0; padding: 0 10px; width: auto; }
 
 /* Block */
-.Block{margin:0 auto 1em;overflow:auto;_overflow:visible;_zoom:1;}
+.Block{margin:0 auto 1em;overflow:visible;_zoom:1;}
 .Block:after{clear:both;content:".";display:block;height:0;visibility:hidden;}
 /* Extentions (probably have to be moved) */
 .narrowed{padding:0 40px;}
 .cramped{padding:0 80px;}
 
 /* Divide */
-.Divide{float:left;overflow:auto;_overflow:visible;_zoom:1;}
+.Divide{float:left;overflow:visible;_zoom:1;}
 .by2{width:48.5%;margin-right:3%;}
 .by3{width:30%;margin-right:5%;}
 .by3x2{width:65%;margin-right:5%;}
@@ -78,7 +78,7 @@ p, ul, ol, dl, q { margin-bottom: .8em; }
 .by5x3{width:58%;margin-right:5%;}
 .by5x4{width:79%;margin-right:5%;}
 .return{float:none;_left:-3px;margin-left:0;margin-right:0;_margin-right:-3px;
-overflow:hidden;_position:relative;width:auto;_zoom:1;}
+overflow:visible;_position:relative;width:auto;_zoom:1;}
 .then_blow{float:right;}
 .Divide.alone{margin-right:5%;}/*lacks margin-bottom*/
 .Divide.then_blow.alone{margin-left:5%;}/*lacks margin-bottom*/
